@@ -1,13 +1,8 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<form>
-    <label name="party"/>
+<tree sequence="sequence">
     <field name="party"/>
-    <label name="sequence"/>
-    <field name="sequence"/>
-    <label name="type"/>
     <field name="type"/>
-    <label name="code"/>
-    <field name="code"/>
-</form>
+    <field name="code" expand="1"/>
+</tree>
