@@ -27,7 +27,8 @@ this repository contains the full copyright notices and license terms. -->
                 view_ids="party.category_view_list"/>
         </page>
         <page name="identifiers">
-            <field name="identifiers" colspan="4" pre_validate="1"/>
+            <field name="identifiers" colspan="4" pre_validate="1"
+                view_ids="party.identifier_list_sequence"/>
         </page>
     </notebook>
 </form>
